bk_ida/gccida/g2/schedule_block
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2123:4: error: expected ';' after expression
rtx v14; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2123:5: error: use of undeclared identifier 'v14'
rtx v14; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2125:6: error: use of undeclared identifier 'vec'
rtx *vec; // rcx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2127:6: error: use of undeclared identifier 'v18'
rtx *v18; // rbp 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2128:31: error: unknown type name 'rtx'
int ( *reorder)( FILE *, int, rtx *, int *, int); // r9 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2132:4: error: expected ';' after expression
rtx v23; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2132:5: error: use of undeclared identifier 'v23'
rtx v23; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2141:43: error: a parameter list without types is only allowed in a function definition
unsigned int ( *blockage_range_function)( rtx); // r14 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2142:33: error: redefinition of parameter 'rtx'
int ( *blockage_function)( rtx, rtx); // rax 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2142:28: error: a parameter list without types is only allowed in a function definition
int ( *blockage_function)( rtx, rtx); // rax 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2146:4: error: expected ';' after expression
rtx v37; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2146:5: error: use of undeclared identifier 'v37'
rtx v37; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2150:19: error: redefinition of parameter 'rtx'
int ( *v41)( rtx, rtx); // rax 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2150:14: error: a parameter list without types is only allowed in a function definition
int ( *v41)( rtx, rtx); // rax 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2154:4: error: expected ';' after expression
rtx v45; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2154:5: error: use of undeclared identifier 'v45'
rtx v45; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2155:4: error: expected ';' after expression
rtx v46; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2155:5: error: use of undeclared identifier 'v46'
rtx v46; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/haifa-sched.c:2168:4: error: expected ';' after expression
rtx depend; // r13 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_block/src/obj/haifa-sched.o] Error 1
